--- a/multi-page-project/src/pages/index/index.html
+++ b/multi-page-project/src/pages/index/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>模版</title>
+    <!-- <title>模板</title> -->
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <% for (var chunk in htmlWebpackPlugin.files.css) { %>
       <% if(htmlWebpackPlugin.files.css[chunk]) {%>
           <link href="<%= htmlWebpackPlugin.files.css[chunk] %>" rel="stylesheet" />
